even more progress